<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login_activity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_margin">

        <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:visibility="gone"
                android:textColor="@color/pantone_blue"
                android:textAlignment="center"
                android:textSize="@dimen/txt_normal"/>
        <EditText
                android:id="@+id/edt_username"
                android:layout_marginTop="@dimen/card_margin"
                android:padding="@dimen/card_margin"
                android:background="@drawable/bg_rectangle_input"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_input"
                android:textSize="@dimen/txt_normal"
                android:textAlignment="center"/>

        <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:padding="@dimen/card_margin"
                android:background="@drawable/bg_rectangle_input"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:textColor="@color/txt_input"
                android:textAlignment="center"
                android:textSize="@dimen/txt_normal"/>

        <TextView
                android:id="@+id/txt_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_blue"
                android:layout_marginTop="@dimen/card_margin"
                android:textAlignment="center"
                android:textSize="@dimen/txt_normal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/lbl_log_in"
                android:textColor="@color/white"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">
            <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_forgot_password"
                    android:textColor="@color/lbl_bg_black"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/tv_click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_click_here"
                    android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>


