<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.technorip.kranioz.kraniozadmin.Activities.DetailActivity">


    <RelativeLayout
            android:layout_width="383dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="1dp" android:id="@+id/relativeLayout">
        <TextView
                android:id="@+id/devid"
                android:layout_below="@id/title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/status_3"
                android:textSize="@dimen/device_notes_size"
                android:text="@string/nots_place_placeholder"
                android:layout_marginTop="-88dp"
                android:layout_alignParentEnd="true"/>
        <TextView
                android:id="@+id/imei"
                android:textColor="?android:textColorSecondary"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="@dimen/device_imei_size"
                android:text="@string/news_placeholder"/>

        <TextView
                android:id="@+id/title"
                android:layout_below="@id/imei"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="@dimen/device_title_size"
                android:text="@string/sports_info_placeholder"/>

        <TextView
                android:id="@+id/notes"
                android:layout_below="@id/title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/status_2"
                android:textSize="@dimen/device_notes_size"
                android:text="@string/nots_place_placeholder"/>





    </RelativeLayout>

    <TableLayout
            android:layout_width="231dp"
            android:layout_height="44dp" tools:layout_editor_absoluteY="162dp"
            android:orientation="horizontal" android:gravity="fill_horizontal" android:id="@+id/table"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">

        <TableRow android:layout_width="124dp"
                  android:layout_height="57dp">
            <TextView
                    android:id="@+id/devstatuslabel"
                    android:text="Device Status"
                    android:textColor="@color/status_2"
            />
            <TextView
                    android:id="@+id/deviceStatus"
                    android:text="@string/nots_place_placeholder"

            />
        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent">
            <TextView
                    android:id="@+id/trackingmodelabel"
                    android:text="Tracking mode"
                    android:textColor="@color/status_2"
            />
            <TextView
                    android:id="@+id/trackingmode"
            />
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>
